# chemistry-day

./: .gitignore  main.py  pyproject.toml
app/: __main__.py
app/core/abstractions/services/: players.py  team_invites.py  teams.py
app/core/exceptions/: __init__.py  invites.py  players.py  teams.py
app/core/impl/services/: players.py  team_invites.py  teams.py  utils.py
app/core/models/: __init__.py  base.py  player.py  team.py  team_invite.py
app/init/: settings.py
app/scripts/: db.py
app/tgbot/: utils.py
app/tgbot/creating_team/: __init__.py  handlers.py
app/tgbot/invites/: constants.py  handlers.py  utils.py
app/tgbot/middlewares/: bot_username.py  di.py
tests/: conftest.py
tests/services/: test_team_invites.py  test_teams.py
