[tool.poetry]
name = "chemistry-day"
version = "0.1.0"
description = ""
authors = ["Kudyakov Artem <t3m8ch@yandex.ru>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.31"
asyncpg = "^0.25.0"
aiogram = "3.0.0b1"
pydantic = "^1.9.0"
python-dotenv = "^0.19.2"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}
pytest = "^7.0.1"
pytest-asyncio = "^0.18.1"

[tool.poetry.scripts]
init_db = "app.scripts.db:init_db"
drop_db = "app.scripts.db:drop_db"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
